{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 1393,
  "lineage": "136c2900-c947-4ed9-1af9-a1d9d445153e",
  "resources": [
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:internet-gateway/igw-02a6df75fddea01e4",
            "id": "igw-02a6df75fddea01e4",
            "owner_id": "931846072481",
            "tags": {
              "Name": "portfolio-osaka-igw"
            },
            "tags_all": {
              "Name": "portfolio-osaka-igw"
            },
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:931846072481:loadbalancer/app/portfolio-osaka-alb/eaeb10ba0bbf560c",
            "arn_suffix": "app/portfolio-osaka-alb/eaeb10ba0bbf560c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "portfolio-osaka-alb-1473548568.ap-northeast-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-3:931846072481:loadbalancer/app/portfolio-osaka-alb/eaeb10ba0bbf560c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "portfolio-osaka-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09498f1235c23e620"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03897b7218a2945d1"
              },
              {
                "subnet_id": "subnet-0c04df569093f2be9"
              }
            ],
            "subnets": [
              "subnet-03897b7218a2945d1",
              "subnet-0c04df569093f2be9"
            ],
            "tags": {
              "Name": "portfolio-osaka-alb"
            },
            "tags_all": {
              "Name": "portfolio-osaka-alb"
            },
            "vpc_id": "vpc-002b5e616a65b9a3f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z5LXEXXYW11ES"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_security_group.alb",
            "module.osaka.aws_subnet.public_a",
            "module.osaka.aws_subnet.public_c",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:931846072481:listener/app/portfolio-osaka-alb/eaeb10ba0bbf560c/591678ae7db1f8d4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-3:931846072481:listener/app/portfolio-osaka-alb/eaeb10ba0bbf560c/591678ae7db1f8d4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-3:931846072481:loadbalancer/app/portfolio-osaka-alb/eaeb10ba0bbf560c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_lb.main",
            "module.osaka.aws_security_group.alb",
            "module.osaka.aws_subnet.public_a",
            "module.osaka.aws_subnet.public_c",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:931846072481:listener/app/portfolio-osaka-alb/eaeb10ba0bbf560c/56c6cf559ff1f16c",
            "certificate_arn": "arn:aws:acm:ap-northeast-3:931846072481:certificate/963df6f1-f4e0-4357-a4d6-fc7a122338c0",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-3:931846072481:targetgroup/ptftg-20260408145620742200000001/5c3411a312b28feb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-3:931846072481:listener/app/portfolio-osaka-alb/eaeb10ba0bbf560c/56c6cf559ff1f16c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-3:931846072481:loadbalancer/app/portfolio-osaka-alb/eaeb10ba0bbf560c",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route53_zone.portfolio_sub",
            "module.osaka.aws_acm_certificate.main",
            "module.osaka.aws_acm_certificate_validation.main",
            "module.osaka.aws_lb.main",
            "module.osaka.aws_lb_target_group.main",
            "module.osaka.aws_route53_record.cert_validation",
            "module.osaka.aws_security_group.alb",
            "module.osaka.aws_subnet.public_a",
            "module.osaka.aws_subnet.public_c",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-3:931846072481:targetgroup/ptftg-20260408145620742200000001/5c3411a312b28feb",
            "arn_suffix": "targetgroup/ptftg-20260408145620742200000001/5c3411a312b28feb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-3:931846072481:targetgroup/ptftg-20260408145620742200000001/5c3411a312b28feb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-3:931846072481:loadbalancer/app/portfolio-osaka-alb/eaeb10ba0bbf560c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ptftg-20260408145620742200000001",
            "name_prefix": "ptftg-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:route-table/rtb-0cf2ab3b039b768c5",
            "id": "rtb-0cf2ab3b039b768c5",
            "owner_id": "931846072481",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "portfolio-osaka-private-rt"
            },
            "tags_all": {
              "Name": "portfolio-osaka-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:route-table/rtb-0488ce0af429b535e",
            "id": "rtb-0488ce0af429b535e",
            "owner_id": "931846072481",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a6df75fddea01e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "portfolio-osaka-public-rt"
            },
            "tags_all": {
              "Name": "portfolio-osaka-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_internet_gateway.main",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aebadee808e70551",
            "route_table_id": "rtb-0cf2ab3b039b768c5",
            "subnet_id": "subnet-002bdebae4d18d648"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_route_table.private",
            "module.osaka.aws_subnet.private_a",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c14b0d221e107b2e",
            "route_table_id": "rtb-0cf2ab3b039b768c5",
            "subnet_id": "subnet-08632cdade73f9645"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_route_table.private",
            "module.osaka.aws_subnet.private_c",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f7d7314d6ce56ae",
            "route_table_id": "rtb-0488ce0af429b535e",
            "subnet_id": "subnet-03897b7218a2945d1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_internet_gateway.main",
            "module.osaka.aws_route_table.public",
            "module.osaka.aws_subnet.public_a",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ac231c6931b2603",
            "route_table_id": "rtb-0488ce0af429b535e",
            "subnet_id": "subnet-0c04df569093f2be9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_internet_gateway.main",
            "module.osaka.aws_route_table.public",
            "module.osaka.aws_subnet.public_c",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:security-group/sg-09498f1235c23e620",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09498f1235c23e620",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "portfolio-osaka-alb-sg",
            "name_prefix": "",
            "owner_id": "931846072481",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "portfolio-osaka-alb-sg"
            },
            "tags_all": {
              "Name": "portfolio-osaka-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:security-group/sg-0bda77848af9bf8e9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bda77848af9bf8e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "portfolio-osaka-vpce-sg",
            "name_prefix": "",
            "owner_id": "931846072481",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:security-group/sg-0f8e08a05d18711e0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8e08a05d18711e0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09498f1235c23e620"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "portfolio-osaka-web-sg",
            "name_prefix": "",
            "owner_id": "931846072481",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "portfolio-osaka-web-sg"
            },
            "tags_all": {
              "Name": "portfolio-osaka-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_security_group.alb",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:subnet/subnet-002bdebae4d18d648",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002bdebae4d18d648",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931846072481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio-osaka-private-a"
            },
            "tags_all": {
              "Name": "portfolio-osaka-private-a"
            },
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:subnet/subnet-08632cdade73f9645",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08632cdade73f9645",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931846072481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio-osaka-private-c"
            },
            "tags_all": {
              "Name": "portfolio-osaka-private-c"
            },
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:subnet/subnet-03897b7218a2945d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03897b7218a2945d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931846072481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio-osaka-public-a"
            },
            "tags_all": {
              "Name": "portfolio-osaka-public-a"
            },
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:subnet/subnet-0c04df569093f2be9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c04df569093f2be9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931846072481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio-osaka-public-c"
            },
            "tags_all": {
              "Name": "portfolio-osaka-public-c"
            },
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:vpc/vpc-002b5e616a65b9a3f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d096b6df31acb2d1",
            "default_route_table_id": "rtb-042fee93086257ec7",
            "default_security_group_id": "sg-00ad6bf7eb1f4e8b6",
            "dhcp_options_id": "dopt-0d4d0e3d06fae8137",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-002b5e616a65b9a3f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042fee93086257ec7",
            "owner_id": "931846072481",
            "tags": {
              "Name": "portfolio-osaka-vpc"
            },
            "tags_all": {
              "Name": "portfolio-osaka-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:vpc-endpoint/vpce-0dc2f2be62c82d725",
            "cidr_blocks": [
              "52.94.19.0/24",
              "35.71.110.0/25",
              "35.71.110.128/26"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dc2f2be62c82d725",
            "ip_address_type": "ipv4",
            "owner_id": "931846072481",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-47a6432e",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0cf2ab3b039b768c5"
            ],
            "service_name": "com.amazonaws.ap-northeast-3.dynamodb",
            "service_region": "ap-northeast-3",
            "state": "available",
            "tags": {
              "Name": "portfolio-vpce-osaka-dynamodb"
            },
            "tags_all": {
              "Name": "portfolio-vpce-osaka-dynamodb"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_route_table.private",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:vpc-endpoint/vpce-05a1a4ed492df5606",
            "dns_entry": [
              {
                "dns_name": "vpce-05a1a4ed492df5606-ihxrkv68.ec2messages.ap-northeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z376B5OMM2JZL2"
              },
              {
                "dns_name": "vpce-05a1a4ed492df5606-ihxrkv68-ap-northeast-3a.ec2messages.ap-northeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z376B5OMM2JZL2"
              },
              {
                "dns_name": "vpce-05a1a4ed492df5606-ihxrkv68-ap-northeast-3c.ec2messages.ap-northeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z376B5OMM2JZL2"
              },
              {
                "dns_name": "ec2messages.ap-northeast-3.amazonaws.com",
                "hosted_zone_id": "Z06322023UCRAL9MGGNSH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05a1a4ed492df5606",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01648704b75897bd2",
              "eni-05661c326199b00a1"
            ],
            "owner_id": "931846072481",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bda77848af9bf8e9"
            ],
            "service_name": "com.amazonaws.ap-northeast-3.ec2messages",
            "service_region": "ap-northeast-3",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.3.122",
                "subnet_id": "subnet-002bdebae4d18d648"
              },
              {
                "ipv4": "10.1.4.197",
                "subnet_id": "subnet-08632cdade73f9645"
              }
            ],
            "subnet_ids": [
              "subnet-002bdebae4d18d648",
              "subnet-08632cdade73f9645"
            ],
            "tags": {
              "Name": "portfolio-vpce-osaka-ec2messages"
            },
            "tags_all": {
              "Name": "portfolio-vpce-osaka-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_security_group.vpce",
            "module.osaka.aws_subnet.private_a",
            "module.osaka.aws_subnet.private_c",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:vpc-endpoint/vpce-042df51917efdca8e",
            "cidr_blocks": [
              "3.5.240.0/22",
              "52.95.182.0/23",
              "52.95.181.0/24"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-042df51917efdca8e",
            "ip_address_type": "ipv4",
            "owner_id": "931846072481",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-a4a540cd",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0cf2ab3b039b768c5"
            ],
            "service_name": "com.amazonaws.ap-northeast-3.s3",
            "service_region": "ap-northeast-3",
            "state": "available",
            "tags": {
              "Name": "portfolio-vpce-osaka-s3"
            },
            "tags_all": {
              "Name": "portfolio-vpce-osaka-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_route_table.private",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:vpc-endpoint/vpce-0131f740404957dc3",
            "dns_entry": [
              {
                "dns_name": "vpce-0131f740404957dc3-ixmcacop.ssm.ap-northeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z376B5OMM2JZL2"
              },
              {
                "dns_name": "vpce-0131f740404957dc3-ixmcacop-ap-northeast-3a.ssm.ap-northeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z376B5OMM2JZL2"
              },
              {
                "dns_name": "vpce-0131f740404957dc3-ixmcacop-ap-northeast-3c.ssm.ap-northeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z376B5OMM2JZL2"
              },
              {
                "dns_name": "ssm.ap-northeast-3.amazonaws.com",
                "hosted_zone_id": "Z01634711ZQE3CQWQP54Y"
              },
              {
                "dns_name": "ssm.ap-northeast-3.api.aws",
                "hosted_zone_id": "Z016346619VBQT8IFHKTP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0131f740404957dc3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0bd03684578871022",
              "eni-0f2f4fe434fbf90c7"
            ],
            "owner_id": "931846072481",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bda77848af9bf8e9"
            ],
            "service_name": "com.amazonaws.ap-northeast-3.ssm",
            "service_region": "ap-northeast-3",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.3.55",
                "subnet_id": "subnet-002bdebae4d18d648"
              },
              {
                "ipv4": "10.1.4.37",
                "subnet_id": "subnet-08632cdade73f9645"
              }
            ],
            "subnet_ids": [
              "subnet-002bdebae4d18d648",
              "subnet-08632cdade73f9645"
            ],
            "tags": {
              "Name": "portfolio-vpce-osaka-ssm"
            },
            "tags_all": {
              "Name": "portfolio-vpce-osaka-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_security_group.vpce",
            "module.osaka.aws_subnet.private_a",
            "module.osaka.aws_subnet.private_c",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.osaka",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].osaka",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:931846072481:vpc-endpoint/vpce-01b402656bc211465",
            "dns_entry": [
              {
                "dns_name": "vpce-01b402656bc211465-aopl8kfo.ssmmessages.ap-northeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z376B5OMM2JZL2"
              },
              {
                "dns_name": "vpce-01b402656bc211465-aopl8kfo-ap-northeast-3c.ssmmessages.ap-northeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z376B5OMM2JZL2"
              },
              {
                "dns_name": "vpce-01b402656bc211465-aopl8kfo-ap-northeast-3a.ssmmessages.ap-northeast-3.vpce.amazonaws.com",
                "hosted_zone_id": "Z376B5OMM2JZL2"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-3.amazonaws.com",
                "hosted_zone_id": "Z06312883J40RQKLQQA5A"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-3.api.aws",
                "hosted_zone_id": "Z0638746U8LZ9QFBOLTZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01b402656bc211465",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0178214e3070e1e0e",
              "eni-050330e41bc777a53"
            ],
            "owner_id": "931846072481",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0bda77848af9bf8e9"
            ],
            "service_name": "com.amazonaws.ap-northeast-3.ssmmessages",
            "service_region": "ap-northeast-3",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.3.138",
                "subnet_id": "subnet-002bdebae4d18d648"
              },
              {
                "ipv4": "10.1.4.101",
                "subnet_id": "subnet-08632cdade73f9645"
              }
            ],
            "subnet_ids": [
              "subnet-002bdebae4d18d648",
              "subnet-08632cdade73f9645"
            ],
            "tags": {
              "Name": "portfolio-vpce-osaka-ssmmessages"
            },
            "tags_all": {
              "Name": "portfolio-vpce-osaka-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-002b5e616a65b9a3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.osaka.aws_security_group.vpce",
            "module.osaka.aws_subnet.private_a",
            "module.osaka.aws_subnet.private_c",
            "module.osaka.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:internet-gateway/igw-0a5affcab90294444",
            "id": "igw-0a5affcab90294444",
            "owner_id": "931846072481",
            "tags": {
              "Name": "portfolio-tokyo-igw"
            },
            "tags_all": {
              "Name": "portfolio-tokyo-igw"
            },
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:931846072481:loadbalancer/app/portfolio-tokyo-alb/9e5ef7f9858766f4",
            "arn_suffix": "app/portfolio-tokyo-alb/9e5ef7f9858766f4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "portfolio-tokyo-alb-1539931409.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:931846072481:loadbalancer/app/portfolio-tokyo-alb/9e5ef7f9858766f4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "portfolio-tokyo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f737cb10d98e1814"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-044fd132e6402d947"
              },
              {
                "subnet_id": "subnet-056812df35c63f34b"
              }
            ],
            "subnets": [
              "subnet-044fd132e6402d947",
              "subnet-056812df35c63f34b"
            ],
            "tags": {
              "Name": "portfolio-tokyo-alb"
            },
            "tags_all": {
              "Name": "portfolio-tokyo-alb"
            },
            "vpc_id": "vpc-08b2cbedf15132a99",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_security_group.alb",
            "module.tokyo.aws_subnet.public_a",
            "module.tokyo.aws_subnet.public_c",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:931846072481:listener/app/portfolio-tokyo-alb/9e5ef7f9858766f4/9fd5d930c2f705fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:931846072481:listener/app/portfolio-tokyo-alb/9e5ef7f9858766f4/9fd5d930c2f705fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:931846072481:loadbalancer/app/portfolio-tokyo-alb/9e5ef7f9858766f4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_lb.main",
            "module.tokyo.aws_security_group.alb",
            "module.tokyo.aws_subnet.public_a",
            "module.tokyo.aws_subnet.public_c",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:931846072481:listener/app/portfolio-tokyo-alb/9e5ef7f9858766f4/1b64bcd3ec09e85b",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:931846072481:certificate/ff68a221-8ab8-4515-bba5-a8fe12ebe958",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:931846072481:targetgroup/ptftg-20260408145620559000000001/b6a6da61e762b707",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:931846072481:listener/app/portfolio-tokyo-alb/9e5ef7f9858766f4/1b64bcd3ec09e85b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:931846072481:loadbalancer/app/portfolio-tokyo-alb/9e5ef7f9858766f4",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route53_zone.portfolio_sub",
            "module.tokyo.aws_acm_certificate.main",
            "module.tokyo.aws_acm_certificate_validation.main",
            "module.tokyo.aws_lb.main",
            "module.tokyo.aws_lb_target_group.main",
            "module.tokyo.aws_route53_record.cert_validation",
            "module.tokyo.aws_security_group.alb",
            "module.tokyo.aws_subnet.public_a",
            "module.tokyo.aws_subnet.public_c",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:931846072481:targetgroup/ptftg-20260408145620559000000001/b6a6da61e762b707",
            "arn_suffix": "targetgroup/ptftg-20260408145620559000000001/b6a6da61e762b707",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:931846072481:targetgroup/ptftg-20260408145620559000000001/b6a6da61e762b707",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:931846072481:loadbalancer/app/portfolio-tokyo-alb/9e5ef7f9858766f4"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ptftg-20260408145620559000000001",
            "name_prefix": "ptftg-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:route-table/rtb-0788288957052b45f",
            "id": "rtb-0788288957052b45f",
            "owner_id": "931846072481",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "portfolio-tokyo-private-rt"
            },
            "tags_all": {
              "Name": "portfolio-tokyo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:route-table/rtb-0b8b23b57d434cb33",
            "id": "rtb-0b8b23b57d434cb33",
            "owner_id": "931846072481",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a5affcab90294444",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "portfolio-tokyo-public-rt"
            },
            "tags_all": {
              "Name": "portfolio-tokyo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06791805c76e39c0d",
            "route_table_id": "rtb-0788288957052b45f",
            "subnet_id": "subnet-03cefef611e21ae3f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_route_table.private",
            "module.tokyo.aws_subnet.private_a",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bd1251179305cf3",
            "route_table_id": "rtb-0788288957052b45f",
            "subnet_id": "subnet-06f1a3205debf5934"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_route_table.private",
            "module.tokyo.aws_subnet.private_c",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07490cfc4e32ae322",
            "route_table_id": "rtb-0b8b23b57d434cb33",
            "subnet_id": "subnet-044fd132e6402d947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_route_table.public",
            "module.tokyo.aws_subnet.public_a",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5311b05cc13f3c3",
            "route_table_id": "rtb-0b8b23b57d434cb33",
            "subnet_id": "subnet-056812df35c63f34b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_internet_gateway.main",
            "module.tokyo.aws_route_table.public",
            "module.tokyo.aws_subnet.public_c",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:security-group/sg-0f737cb10d98e1814",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f737cb10d98e1814",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "portfolio-tokyo-alb-sg",
            "name_prefix": "",
            "owner_id": "931846072481",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "portfolio-tokyo-alb-sg"
            },
            "tags_all": {
              "Name": "portfolio-tokyo-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:security-group/sg-036193f7d73739663",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-036193f7d73739663",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "portfolio-tokyo-vpce-sg",
            "name_prefix": "",
            "owner_id": "931846072481",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:security-group/sg-0cb4e73e807bd0205",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb4e73e807bd0205",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f737cb10d98e1814"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "portfolio-tokyo-web-sg",
            "name_prefix": "",
            "owner_id": "931846072481",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "portfolio-tokyo-web-sg"
            },
            "tags_all": {
              "Name": "portfolio-tokyo-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_security_group.alb",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:subnet/subnet-03cefef611e21ae3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cefef611e21ae3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931846072481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio-tokyo-private-a"
            },
            "tags_all": {
              "Name": "portfolio-tokyo-private-a"
            },
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:subnet/subnet-06f1a3205debf5934",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f1a3205debf5934",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931846072481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio-tokyo-private-c"
            },
            "tags_all": {
              "Name": "portfolio-tokyo-private-c"
            },
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:subnet/subnet-044fd132e6402d947",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044fd132e6402d947",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931846072481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio-tokyo-public-a"
            },
            "tags_all": {
              "Name": "portfolio-tokyo-public-a"
            },
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:subnet/subnet-056812df35c63f34b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056812df35c63f34b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931846072481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio-tokyo-public-c"
            },
            "tags_all": {
              "Name": "portfolio-tokyo-public-c"
            },
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:vpc/vpc-08b2cbedf15132a99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04c08c15d8dde3389",
            "default_route_table_id": "rtb-0d028c85bb8fa03c9",
            "default_security_group_id": "sg-0f13b418d2fdb114e",
            "dhcp_options_id": "dopt-0b5ae5bb45b452f9c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08b2cbedf15132a99",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d028c85bb8fa03c9",
            "owner_id": "931846072481",
            "tags": {
              "Name": "portfolio-tokyo-vpc"
            },
            "tags_all": {
              "Name": "portfolio-tokyo-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:vpc-endpoint/vpce-01fd1cddf70011a15",
            "cidr_blocks": [
              "52.94.8.0/24",
              "13.248.69.0/24",
              "13.248.70.0/24",
              "35.71.114.0/25",
              "35.71.114.128/26"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01fd1cddf70011a15",
            "ip_address_type": "ipv4",
            "owner_id": "931846072481",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0788288957052b45f"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.dynamodb",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "portfolio-vpce-tokyo-dynamodb"
            },
            "tags_all": {
              "Name": "portfolio-vpce-tokyo-dynamodb"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_route_table.private",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:vpc-endpoint/vpce-04bb1f3b7d522d6d5",
            "dns_entry": [
              {
                "dns_name": "vpce-04bb1f3b7d522d6d5-bcybksg8.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-04bb1f3b7d522d6d5-bcybksg8-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-04bb1f3b7d522d6d5-bcybksg8-ap-northeast-1c.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ec2messages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z02914783SE2V8K4MLU4B"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04bb1f3b7d522d6d5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00162731f6081a842",
              "eni-0164190f96a35a457"
            ],
            "owner_id": "931846072481",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-036193f7d73739663"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.167",
                "subnet_id": "subnet-03cefef611e21ae3f"
              },
              {
                "ipv4": "10.0.4.159",
                "subnet_id": "subnet-06f1a3205debf5934"
              }
            ],
            "subnet_ids": [
              "subnet-03cefef611e21ae3f",
              "subnet-06f1a3205debf5934"
            ],
            "tags": {
              "Name": "portfolio-vpce-tokyo-ec2messages"
            },
            "tags_all": {
              "Name": "portfolio-vpce-tokyo-ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_security_group.vpce",
            "module.tokyo.aws_subnet.private_a",
            "module.tokyo.aws_subnet.private_c",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:vpc-endpoint/vpce-00a9a44206534fe5c",
            "cidr_blocks": [
              "3.5.152.0/21",
              "52.219.162.0/23",
              "52.219.0.0/20",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.172.0/22",
              "52.219.20.0/23",
              "52.219.195.0/24",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.68.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00a9a44206534fe5c",
            "ip_address_type": "ipv4",
            "owner_id": "931846072481",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0788288957052b45f"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "service_region": "ap-northeast-1",
            "state": "available",
            "tags": {
              "Name": "portfolio-vpce-tokyo-s3"
            },
            "tags_all": {
              "Name": "portfolio-vpce-tokyo-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_route_table.private",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:vpc-endpoint/vpce-05570bb21b2b12051",
            "dns_entry": [
              {
                "dns_name": "vpce-05570bb21b2b12051-oxu3sip1.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-05570bb21b2b12051-oxu3sip1-ap-northeast-1a.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-05570bb21b2b12051-oxu3sip1-ap-northeast-1c.ssm.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssm.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z013730625RDX7T63GOJN"
              },
              {
                "dns_name": "ssm.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z0133213112NYYVS57YZB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05570bb21b2b12051",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03cf2689775efac2b",
              "eni-0f04b15ae92f0afe2"
            ],
            "owner_id": "931846072481",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-036193f7d73739663"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssm",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.35",
                "subnet_id": "subnet-03cefef611e21ae3f"
              },
              {
                "ipv4": "10.0.4.111",
                "subnet_id": "subnet-06f1a3205debf5934"
              }
            ],
            "subnet_ids": [
              "subnet-03cefef611e21ae3f",
              "subnet-06f1a3205debf5934"
            ],
            "tags": {
              "Name": "portfolio-vpce-tokyo-ssm"
            },
            "tags_all": {
              "Name": "portfolio-vpce-tokyo-ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_security_group.vpce",
            "module.tokyo.aws_subnet.private_a",
            "module.tokyo.aws_subnet.private_c",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931846072481:vpc-endpoint/vpce-00151b996d3bf8897",
            "dns_entry": [
              {
                "dns_name": "vpce-00151b996d3bf8897-wax3dup7.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-00151b996d3bf8897-wax3dup7-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-00151b996d3bf8897-wax3dup7-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.amazonaws.com",
                "hosted_zone_id": "Z015630522LDVZNK0I50W"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-1.api.aws",
                "hosted_zone_id": "Z028050212UKZH0FC6S3R"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00151b996d3bf8897",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08ed76a1d5b546094",
              "eni-0a6850ca3c7f582b3"
            ],
            "owner_id": "931846072481",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-036193f7d73739663"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "service_region": "ap-northeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.67",
                "subnet_id": "subnet-03cefef611e21ae3f"
              },
              {
                "ipv4": "10.0.4.132",
                "subnet_id": "subnet-06f1a3205debf5934"
              }
            ],
            "subnet_ids": [
              "subnet-03cefef611e21ae3f",
              "subnet-06f1a3205debf5934"
            ],
            "tags": {
              "Name": "portfolio-vpce-tokyo-ssmmessages"
            },
            "tags_all": {
              "Name": "portfolio-vpce-tokyo-ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-08b2cbedf15132a99"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.tokyo.aws_security_group.vpce",
            "module.tokyo.aws_subnet.private_a",
            "module.tokyo.aws_subnet.private_c",
            "module.tokyo.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}